@@ -18,7 +18,8 @@
 # ----------------------------------------------------------------------*/
 
 CC = gcc
-CFLAGS = -g -march=nocona
+# CFLAGS = -g -march=nocona
+CFLAGS = -g
 WARN_FLAGS = -Wall #-W -Wconversion
 OPT_FLAGS = -O3
 INC = -I. -Iinclude
@@ -60,7 +61,9 @@ ifeq ($(NFS),1)
 	# NFS builds require GMP
 	ifneq ($(GMPECM),1)
 		CFLAGS += -DHAVE_GMP
+		# INC += -I/sppdg/scratch/buhrow/gmp-4.2.3/install/include/
 		INC += -I../gmp/include/
+		# LIBS += -L/sppdg/scratch/buhrow/gmp-4.2.3/install/lib/ -lgmp
 		LIBS += -L../gmp/lib/ -lgmp
 	endif
 
@@ -68,7 +71,9 @@ ifeq ($(NFS),1)
 	# ECM must also be enabled here
 	CFLAGS += -DHAVE_GMP_ECM
 	INC += -I../gmp-ecm/include/
+	# INC += -I/sppdg/scratch/buhrow/ecm-6.2.3/install/include/
 	LIBS += -L../gmp-ecm/lib/ -lecm
+	# LIBS += -L/sppdg/scratch/buhrow/ecm-6.2.3/install/lib/ -lecm
 endif
 
 ifeq ($(FORCE_MODERN),1)
